--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/GSOFT1/743999692335739-product-designer'>GSOFT Product Designer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=obwhafwS&__jvst=Employee&__jvsd=sm7b5hwv&__jvsc=Twitter&bid=nm3aWLwL'>Ingram Micro Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
@@ -48,7 +52,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/flowspace/19ee4382-3ff7-4609-ad11-aa96d4067d07'>Flowspace - Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/flowspace/19ee4382-3ff7-4609-ad11-aa96d4067d07'>Flowspace - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -56,7 +60,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ogJC8fwt&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=ng59WLwG'>ServiceNow Careers - Principal Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ogJC8fwt&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=ng59WLwG'>ServiceNow Careers - Principal Product Manager</a></h5> 
 <p><span class="badge badge-light">Tel Aviv Tel-Aviv</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
@@ -74,7 +78,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/infoblox/job/ovlCafwm'>Infoblox Careers - Product Manager- Competitive Analysis</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/infoblox/job/ovlCafwm'>Infoblox Careers - Product Manager- Competitive Analysis</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -164,7 +168,7 @@
 <p><span class="badge badge-light">Sofia City Province, Bulgaria</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://tide.workable.com/j/F392F9AD03'>Tide Business Banking - Jobs: Product Owner - Tooling - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tide.workable.com/j/F392F9AD03'>Tide Business Banking - Jobs: Product Owner - Tooling - Apply online</a></h5> 
 <p><span class="badge badge-light">Sofia City Province, Bulgaria</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -184,7 +188,7 @@
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/farfetch/job/onrCafwk'>Farfetch Careers - Product Manager - Platform</a></h5> 
+<h5><a href='https://jobs.jobvite.com/farfetch/job/onrCafwk'>Farfetch Careers - Product Manager - Platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -200,7 +204,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://bossanovarobotics.applytojob.com/apply/mDp7yXHGBq/Product-Manager-Operations'>Product Manager - Operations - Bossanova Robotics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/mDp7yXHGBq/Product-Manager-Operations'>Product Manager - Operations - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -230,7 +234,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/augustus/637fab4b-0fb1-41e0-9a49-62290b1d41e7'>Augustus Intelligence - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/augustus/637fab4b-0fb1-41e0-9a49-62290b1d41e7'>Augustus Intelligence - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -306,12 +310,12 @@ roadmap that heavily leverages Salesforce.com, customer data, and integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://faveo.join.com/jobs/254901-junior-product-manager-m-w-d'>Job @ faveo (Essen): Junior Product Manager (m/w/d) | JOIN</a></h5> 
+<h5><a href='https://faveo.join.com/jobs/254901-junior-product-manager-m-w-d'>Job @ faveo (Essen): Junior Product Manager (m/w/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>15. Juli 2019 ... faveo GmbH has a job opening for Junior Product Manager (m/w/d) in Essen (
 published: 06.05.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/92666B7897'>DataVisor - Jobs: Product Designer - Mountain View, CA - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/92666B7897'>DataVisor - Jobs: Product Designer - Mountain View, CA - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... unsupervised machine learning to detect fraudulent activity for financial. 
 transactions, mobile user acquisition, social networks, commerce and money.</p>
@@ -371,11 +375,11 @@ experience analysis and testing, competitive research and any other relevant?...
 processing, and interactive Web applications. Check out our tech stack! Apply for 
 this?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/apttus/job/oyVL9fw7'>Apttus Careers - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/apttus/job/oyVL9fw7'>Apttus Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://productsup.join.com/jobs/260825-product-manager-m-f-d'>Job @ Productsup (Berlin): Product Manager (m/f/d) | JOIN</a></h5> 
+<h5><a href='https://productsup.join.com/jobs/260825-product-manager-m-f-d'>Job @ Productsup (Berlin): Product Manager (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -453,10 +457,6 @@ designers and engineers, and operations to lead the vision, strategy, and?...</p
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/endless/82c9be8f-89c2-4e5c-800e-5b854480811f'>Endless - Sr. Product Designer</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/endless/e429bff6-21de-4b1d-87de-8d0065f40625'>Endless - Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
